--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,7 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.pure-form-aligned .pure-control-group label {
+  width: inherit;
+}
