--- a/src/index.css
+++ b/src/index.css
@@ -285,3 +285,11 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
 .pure-button-primary {
   background-color: #1f8dd6;
 }
+
+.pure-menu-heading {
+  text-align: center;
+}
+
+.pure-menu-heading img {
+  width: 50px;
+}
